<resources>
    <string name="app_name">Shopeliv</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Shopliv</string>
    <string name="slide_1_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since......</string>

    <string name="slide_2_title">Shopliv</string>
    <string name="slide_2_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since......</string>

    <string name="slide_3_title">Shopliv</string>
    <string name="slide_3_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since......</string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_splash_activty">SplashActivty</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_username">Email ID/Mobile Number</string>
    <string name="title_password">Password</string>
    <string name="title_signin">Sign In</string>
    <string name="title_forgotpassword">Forgot your password?</string>
    <string name="title_newuser">New  User ?</string>
    <string name="title_register">Register</string>
    <string name="title_activity_forot_password_actvity">ForotPasswordActvity</string>
    <string name="title_enteremailid">Please Enter Your  Email Id</string>
    <string name="title_emailid">Please Enter Your  Email Id</string>
    <string name="title_next">Next</string>
    <string name="title_activity_otp">OTPActivity</string>
    <string name="title_otp">OTP</string>
    <string name="title_enter_otp">Please enter the OTP  sent  on your  Email Id</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_enter_new_password">Enter New Password</string>
    <string name="title_confirm_new_password">Confirm New Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_password_terms"> Password should be minimum of 8 characters with at least 1 Uppercase letter (A-Z), Lowercase letter (a-z), Digit (0-9) and a Special character.
</string>

    <string name="title_first_name">First Name</string>
    <string name="title_last_name">Last Name</string>
    <string name="title__signup_emailid">Email ID</string>
    <string name="title__signup_phonenumber">Phone Number</string>
    <string name="title__signup_password">Password</string>
    <string name="title__signup_confirmpassword">Confirm Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_password_rule">Password should be minimum of 8 characters with at least 1 Uppercase letter (A-Z), Lowercase letter (a-z), Digit (0-9) and a Special character.
</string>
    <string name="title_agree_terms">I agree to Shopeliv’s Terms and  Condition and Privacy Policy</string>

    <string name="title__signin">Sign In</string>
    <string name="title_activity_regitration_otp">RegitrationOtpActivity</string>

    <string name="title_onetimepassword">Enter One Time Password(OTP)</string>

    <string name="title_onetimepassword_message">One Time Password (OTP) has been sent to your
Email Id, please enter the same here to login.</string>


    <string name="title_sendagain">Send Again</string>
    <string name="title_done">Done</string>
    <string name="search_by_category">Search by category</string>
    <string name="title_country">Country</string>
    <string name="search_by_brand">Search by brand,product,store...</string>
    <string name="title_city">City</string>
    <string name="title_language">Language</string>


    <string name="title_do_you_want">Do you want:</string>

    <string name="title_select_category">Select by category:</string>
    <string name="title_select_sub_category">Select by sub category</string>
    <string name="title_select_sub_category_2">Select by sub category - 2</string>

    <string name="title_select_type_seller">Select type of seller</string>
    <string name="title_select_type_sellertypes">Select preferred  shop types</string>
</resources>
