<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="info.androidhive.shopliv.activity.LoginActivity">


    <info.androidhive.shopliv.other.MyEditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_above="@+id/editText2"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:background="@drawable/rounded_border_edittext"
        android:ems="10"
        android:hint="@string/title_username"
        android:inputType="textPersonName"
        android:textColorHint="@color/colortext"
        app:font_name="CocogooseLight" />

    <info.androidhive.shopliv.other.MyEditText
        android:id="@+id/editText2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_border_edittext"
        android:ems="10"
        android:hint="@string/title_password"
        android:inputType="textPassword"
        android:textColorHint="@color/colortext"
        app:font_name="CocogooseLight" />

    <info.androidhive.shopliv.other.CustomButton
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:background="@drawable/rounded_border_button"
        android:text="@string/title_signin"
        android:textColorHint="@color/colorPrimary" />

    <info.androidhive.shopliv.other.CustomTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:text="@string/title_forgotpassword"
        android:textColor="@color/dot_light_screen1"
        android:textSize="@dimen/fab_margin"
        app:font_name="CocogooseLight" />

    <info.androidhive.shopliv.other.CustomTextView
        android:id="@+id/textView2"
        app:font_name="CocogooseLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:textColor="@color/dot_light_screen1"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="36dp"
        android:textSize="@dimen/fab_margin"
        android:text="@string/title_newuser" />

    <info.androidhive.shopliv.other.CustomTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:text="@string/title_register"
        android:textColor="@color/dot_light_screen1"
        android:textSize="@dimen/fab_margin"
        app:font_name="CocogooseBold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />
</RelativeLayout>
