<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="info.androidhive.shopliv.activity.OTPActivity">




    <info.androidhive.shopliv.other.CustomTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/title_change_password"
        android:textColor="@color/dot_light_screen1"
        android:textSize="@dimen/fab_margin"
        app:font_name="CocogooseLight" />


    <info.androidhive.shopliv.other.MyEditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:background="@drawable/rounded_border_edittext"
        android:ems="10"
        android:hint="@string/title_enter_new_password"
        android:inputType="textPersonName"
        android:textColorHint="@color/colortext"
        app:font_name="CocogooseLight" />


    <info.androidhive.shopliv.other.MyEditText
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_border_edittext"
        android:ems="10"
        android:hint="@string/title_confirm_new_password"
        android:inputType="textPersonName"
        android:textColorHint="@color/colortext"
        app:font_name="CocogooseLight"
        android:id="@+id/myEditText" />

    <info.androidhive.shopliv.other.CustomTextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="@string/title_password_terms"
        android:textColor="@color/dot_light_screen1"
        android:textSize="@dimen/fab_margin"
        app:font_name="CocogooseLight" />


    <info.androidhive.shopliv.other.CustomButton
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/myEditText"
        android:layout_marginBottom="76dp"
        android:background="@drawable/rounded_border_button"
        android:text="@string/next"
        android:textColorHint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:src="@drawable/logo" />


</RelativeLayout>
