<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="info.androidhive.shopliv.activity.LoginActivity">


    <info.androidhive.shopliv.other.CustomTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/title_enteremailid"
        android:textColor="@color/dot_light_screen1"
        android:textSize="@dimen/fab_margin"
        app:font_name="CocogooseLight" />


    <info.androidhive.shopliv.other.MyEditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:background="@drawable/rounded_border_edittext"
        android:ems="10"
        android:hint="@string/title_username"
        android:inputType="textPersonName"
        android:textColorHint="@color/colortext"
        app:font_name="CocogooseLight" />


    <info.androidhive.shopliv.other.CustomButton
        android:id="@+id/btn_fpa_next"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_border_button"
        android:text="@string/next"
        android:textColorHint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:src="@drawable/logo" />


</RelativeLayout>
